# OpenDQV

./: .coverage  .dockerignore  .env.example  .gitignore  .grype.yaml  .pre-commit-config.yaml  .trivyignore  BT-7274.txt  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.smoketest  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  claude_desktop_config.json  cli.py  config.py  demo.tape  demo_dbt.tape  demo_duckdb.tape  demo_kafka.tape  demo_ofcom.tape  demo_pandas.tape  demo_postgres.tape  demo_readme.tape  demo_salesforce.tape  demo_wizard.tape  docker-compose.demo.yml  docker-compose.dev.yml  docker-compose.perf.yml  docker-compose.prod.yml  docker-compose.yml  install.bat  install.sh  (+12 more)
.github/: CODEOWNERS  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: alpha_feedback.yml
.github/ISSUE_TEMPLATE/: bug_report.md  data_contract.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  docker-publish.yml  link-check.yml  publish.yml  release.yml  scorecard.yml
api/: deps.py  graphql_schema.py  models.py  routes.py  routes_analytics.py  routes_contracts.py  routes_federation.py  routes_imports.py  routes_profiler.py  routes_tokens.py  routes_validation.py  routes_webhooks.py
contracts/: agriculture_batch.yaml  allereasy_dish.yaml  automotive_vehicle.yaml  banking_transaction.yaml  books.yaml  building_safety_golden_thread.yaml  companies_house_filing.yaml  customer.yaml  customer_onboarding.yaml  dora_ict_incident.yaml  e2e_audit_test.yaml  education_student.yaml  energy_meter_reading.yaml  eu_gdpr_dsar_request.yaml  eu_gdpr_processing_record.yaml  financial_services_customer.yaml  financial_trade.yaml  fmcg_product.yaml  gdpr_dsar_request.yaml  gdpr_processing_record.yaml  healthcare_patient.yaml  hipaa_disclosure_accounting.yaml  hr_employee.yaml  imported_contract.yaml  insurance_claim.yaml  logistics_shipment.yaml  manufacturing_iot.yaml  martyns_law_event.yaml  martyns_law_venue.yaml  media_content.yaml  mifid_transaction_report.yaml  pharma_clinical_trial.yaml  ppds_menu_item.yaml  pretix_event.yaml  proof_of_play.yaml  public_sector_service.yaml  qsr_menu_item.yaml  real_estate_property.yaml  retail_product.yaml  sf_contact.yaml  (+8 more)
contracts/ref/: allergen_tree_nut_types.txt  books_genres.txt  companies_house_roles.txt  dora_remediation_status.txt  eu_gdpr_supervisory_authority.txt  gdpr_dsar_status.txt  gdpr_lawful_basis.txt  gdpr_request_type.txt  gdpr_special_category_basis.txt  hipaa_disclosure_purpose.txt  hipaa_recipient_type.txt  loyalty_tiers.txt  martyns_law_event_types.txt  martyns_law_venue_types.txt  mifid_id_type.txt  sox_control_category.txt  sox_deficiency_classification.txt  sox_financial_assertion.txt  sox_test_result.txt  verification_methods.txt
core/: clock_sync.py  code_generator.py  contracts.py  explainer.py  federation.py  isolation_log.py  node_health.py  onboarding.py  profiler.py  quality_analytics.py  quality_stats.py  rule_parser.py  storage.py  trace_log.py  validator.py  webhooks.py  worker_heartbeat.py
core/importers/: csv_rules.py  csvw.py  ndc.py  odcs.py  otel.py
docs/: administration.md  api_reference.md  architecture.md  asset_id_uri_convention.md  atlan_integration.md  beginner-quickstart.md  benchmark_throughput.md  catalog_integration.md  cli.md  code_generation.md  collibra_integration.md  community_use_cases.md  compliance-contracts.md  connector_sdk_spec.md  contexts.md  contract_versioning.md  custom_rules.md  databricks_integration.md  datahub_integration.md  dbt_integration.md  demo.md  deployment_registry.md  disaster-recovery.md  duckdb_integration.md  ecosystem_reference_stack.md  error_codes.md  ethos.md  faq.md  federation.md  gx_integration.md  importers.md  index.md  iq_dimension_mapping.md  kafka_integration.md  llm_integration.md  marmot_integration.md  mcp.md  montecarlo_integration.md  naming_conventions.md  observability.md  (+21 more)
docs/i18n/: README.md
docs/rules/: README.md  (+15 more)
opendqv/: __init__.py  cli.py  config.py  main.py  mcp_server.py  monitoring.py
postman/: OpenDQV.postman_collection.json  OpenDQV.postman_environment.json
scripts/: _demo_utils.py  build-multiarch.sh  clean_room_test.sh  customer_building_safety_demo.py  customer_companies_house_demo.py  customer_dora_demo.py  customer_gdpr_demo.py  customer_healthcare_demo.py  customer_hr_demo.py  customer_martyns_law_demo.py  customer_mifid_demo.py  customer_ooh_demo.py  customer_ppds_demo.py  customer_sox_demo.py  databricks_local_demo.py  demo-test.sh  demo.py  demo_dbt.py  demo_duckdb.py  demo_kafka.py  demo_mcp_scenario.py  demo_ofcom.py  demo_pandas.py  demo_postgres.py  demo_readme.py  demo_salesforce.py  demo_wizard.py  demo_workbench.py  diagnose_ui.py  diagnose_ui.sh  grok_consult.py  llm_remediation_loop.py  perf-test.sh  push_quality_lineage.py  record_demo_readme.sh  run_smoke_tests.sh  seed_broad_demo.py  seed_demo_data.py  source_system_simulator.py  start_api.sh  (+6 more)
sdk/: __init__.py  client.py  local.py
security/: auth.py
tests/: conftest.py  fake-app-server.js  load-test-results.md  load-test-universal.js  load-test.js  test_api.py  test_auth_modes.py  test_benchmark.py  test_cli.py  test_cli_extended.py  test_clock_sync.py  test_code_generator.py  test_config_validation.py  test_contract_linter.py  test_contracts.py  test_contracts_extended.py  test_core.py  test_core_hardening.py  test_crt168_audit_credibility.py  test_crt168_linter_rules.py  test_crt168_lookup_source.py  test_crt170_j2_caller_principal.py  test_crt170_j4_error_code_instance.py  test_crt170_j6_data_confidence.py  test_crt172_k1_k2_audit_events.py  test_crt172_k5_config_endpoint.py  test_crt173_v2310_quick_wins.py  test_crt173_v2311_engine_semantics.py  test_crt173_v2312_response_shape.py  test_crt173_v2313_observability.py  test_crt173_v2314_response_shape.py  test_crt173_v2315_system_agent_suppression.py  test_dbt_import.py  test_duckdb_integration.py  test_e2e.py  test_endpoint_consistency.py  test_explainer.py  test_federation_api.py  test_federation_log.py  test_geospatial.py  (+99 more)
ui/: app.py
(+210 files in other folders)
