[tool.poetry]
name = "opendqv"
version = "2.3.1"
description = "OpenDQV Core — open-source, contract-driven data quality validation engine for data pipelines and API boundaries"
authors = ["Sunny Sharma"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/OpenDQV/OpenDQV"
repository = "https://github.com/OpenDQV/OpenDQV"
documentation = "https://github.com/OpenDQV/OpenDQV/tree/main/docs"
keywords = ["data-quality", "validation", "duckdb", "api", "data-contracts"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Framework :: FastAPI",
    "Typing :: Typed",
]
packages = [
    { include = "opendqv" },
]
include = [
    "opendqv/py.typed",
    "opendqv/core/py.typed",
    "opendqv/api/py.typed",
    "opendqv/security/py.typed",
    "opendqv/sdk/py.typed",
    "opendqv/contracts/*.yaml",
    "opendqv/contracts/ref/*.txt",
]

[tool.poetry.urls]
Changelog = "https://github.com/OpenDQV/OpenDQV/blob/main/CHANGELOG.md"

[tool.poetry.scripts]
opendqv = "opendqv.cli:main"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.115,<0.136"
uvicorn = {version = ">=0.34,<0.45", extras = ["standard"]}
pydantic = "^2.10"
pyyaml = "^6.0"
pandas = ">=2.2,<4.0"
duckdb = "^1.0"
PyJWT = "^2.12"
passlib = {version = "^1.7", extras = ["bcrypt"]}
python-multipart = ">=0.0.26"
slowapi = "^0.1"
prometheus-client = "^0.21"
httpx = "^0.27"
regex = ">=2024.0.0"
requests = "^2.33"
strawberry-graphql = {version = ">=0.311,<0.313", extras = ["fastapi"]}
gunicorn = {version = "^25.0", optional = true}
streamlit = {version = ">=1.40,<2.0", optional = true}
mcp = {version = ">=1.0.0,<2.0.0", optional = true}
psycopg2-binary = {version = "^2.9", optional = true}

[tool.poetry.extras]
# pip install opendqv[server] — adds Gunicorn for production serving
server = ["gunicorn"]
# pip install opendqv[ui] — adds the Streamlit workbench
ui = ["streamlit"]
# pip install opendqv[mcp] — adds the MCP server for Claude/AI tool use
mcp = ["mcp"]
# pip install opendqv[postgres] — adds psycopg2-binary for PostgreSQL backend
postgres = ["psycopg2-binary"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-cov = ">=4,<8"
pytest-playwright = ">=0.4,<0.8"
ruff = ">=0.4,<0.16"
mcp = ">=1.0.0,<2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
omit = [
    "tests/*",
    "scripts/*",
    "ui/*",
    ".venv/*",
    "opendqv/marmot_proxy.py",
]

[tool.coverage.report]
fail_under = 90
precision = 1
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff.lint]
per-file-ignores = { "**/__init__.py" = ["F401"] }
